# purity-bot

./: Cargo.toml
src/: error.rs  main.rs
src/cmd/: clean.rs
src/links/: mod.rs  youshop.rs
