[package]
name = "trans-bot"
version = "0.1.0"
edition = "2021"

[workspace.lints.rust]
unsafe_code = "forbid"

[dependencies]
# shuttle
shuttle-runtime = "0.44.0"
shuttle-serenity = "0.44.0"

# discord
poise = "0.6.1"

tracing = "0.1.37"
url = "2.5.0"
reqwest = "0.12.4"
tokio = { version = "1.37.0", features = ["full"] }
